jilles      2006/10/01 20:35:01 UTC	(20061001-6601)
  Log:
  nickserv help set: take no_nick_ownership into account
  

  Changes:	Modified:
  +4 -1		trunk/modules/nickserv/set.c (File Modified) 


jilles      2006/10/01 20:31:57 UTC	(20061001-6599)
  Log:
  Convert memoserv ignore to command_t and sourceinfo.
  

  Changes:	Modified:
  +96 -105	trunk/modules/memoserv/ignore.c (File Modified) 


jilles      2006/10/01 19:20:01 UTC	(20061001-6597)
  Log:
  Bring back /ns help set, which was lost in r6337.
  

  Changes:	Modified:
  +16 -0	trunk/modules/nickserv/set.c (File Modified) 


jilles      2006/10/01 19:12:28 UTC	(20061001-6595)
  Log:
  Change help functions (not used much) to sourceinfo.
  

  Changes:	Modified:
  +27 -27	trunk/contrib/ns_enforce.c (File Modified) 
  +2 -2		trunk/include/commandtree.h (File Modified) 
  +2 -3		trunk/src/help.c (File Modified) 


jilles      2006/10/01 18:51:45 UTC	(20061001-6593)
  Log:
  Update command_help() and command_help_short() to sourceinfo.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/ircd_catserv.c (File Modified) 
  +2 -2		trunk/include/commandtree.h (File Modified) 
  +4 -6		trunk/modules/chanserv/help.c (File Modified) 
  +1 -1		trunk/modules/global/main.c (File Modified) 
  +1 -1		trunk/modules/memoserv/help.c (File Modified) 
  +2 -2		trunk/modules/nickserv/help.c (File Modified) 
  +1 -1		trunk/modules/operserv/help.c (File Modified) 
  +13 -16	trunk/src/commandtree.c (File Modified) 


jilles      2006/10/01 17:54:52 UTC	(20061001-6591)
  Log:
  Properly fix chanserv register, bug was introduced in r6517 by me.
  

  Changes:	Modified:
  +7 -1		trunk/modules/chanserv/register.c (File Modified) 


pippijn     2006/10/01 00:37:28 UTC	(20061001-6589)
  Log:
  fixed crashing bug that occurred when registering without being logged in
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/register.c (File Modified) 


jilles      2006/09/30 22:35:46 UTC	(20060930-6587)
  Log: